# FptnClient-Android

./: .gitignore  build.gradle.kts  renovate.json
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  conanfile.py
app/src/main/cpp/src/wrappers/wrapper_websocket_client/: wrapper_websocket_client.cpp
app/src/main/java/org/fptn/vpn/services/: CustomVpnConnection.java  CustomVpnService.java
app/src/main/java/org/fptn/vpn/services/tile/: FptnTileService.java
app/src/main/java/org/fptn/vpn/utils/: NetworkType.java  NetworkUtils.java  NotificationUtils.java  PermissionsUtils.java  ServiceUtils.java  SharedPrefUtils.java
app/src/main/java/org/fptn/vpn/viewmodel/: FptnServerViewModel.java
app/src/main/java/org/fptn/vpn/views/: CustomBottomNavigationListener.java  HomeActivity.java  SettingsActivity.java
app/src/main/java/org/fptn/vpn/views/speedtest/: NativeSpeedTestResult.java  NativeSpeedTestTask.java  SpeedTestUtils.java
app/src/main/res/drawable/: bell_ring_24.xml  cloud_back_up_24.xml  eco_battery_24.xml  ic_baseline_close_24.xml  ic_experimental_features_24.xml  ic_sponsors_update_24.xml  ic_tile_shield_off_24.xml  ic_tile_shield_on_24.xml  icon_account_circle_100.xml  user_permissions_24.xml
app/src/main/res/layout/: experimental_settings_dialog.xml  home_layout.xml  settings_layout.xml  settings_server_list_item.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
gradle/: libs.versions.toml
(+1 files in other folders)
